# telegram-channel-monitor

./: .env.example  .gitignore  README.md  bot.py  build_app.py  channel_monitor.py  check_ip.py  check_webrtc.py  create_icon.py  create_macos_app.py  database.py  db_manager.py  db_schema.py  gift_shop.db  gui_app.py  laptop_clicker.py  main.py  main_bot.py  main_secure.py  parsed_messages_20250418_144353.json  parsed_messages_20250418_144404.json  parser.py  pyproject.toml  requirements.txt  telegram_monitor.py  telegram_parser.py  test_bot.py  test_channel.py  test_forward.py  test_parser.py  test_send.py  test_tkinter.py
.github/workflows/: ci.yml
bot/: __init__.py  sender.py
config/: __init__.py  settings.py
parser/: __init__.py  classifiers.py  filters.py  message_parser.py  models.py  monitor.py  security.py  session_manager.py  summarizer.py
tests/: get_session.py  test_classifiers.py  test_models.py  test_parser.py  test_summarizer.py
vpn_test/: README.md  gui_app.py  main.py  privacy_enhance.py  requirements.txt  vpn_guide.md
~/: .zshrc
